[tool.poetry]
name = "dominion-object-model"
version = "1.1.0"
description = "abstract classes for implementing dominion-object-model players and clients"
authors = ["the-gigi <the.gigi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wheel = "^0.34.2"
twine = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
